# authguard

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: build.yml
configs/: authencore.toml.sample  authguard.conf.sample  authguard.toml.sample
src/: aws_iot.rs  cache.rs  circuit_breaker.rs  config.rs  error.rs  logging.rs  main.rs
src/aws/: client.rs  mod.rs
src/config/: mod.rs  parser.rs
src/utils/: errors.rs  filesystem.rs  logging.rs  mod.rs
