[package]
name = "authguard"
version = "1.1.10"
edition = "2021"
authors = ["Oleksandr Zhyhalo"]

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
thiserror = "1.0"
tracing-appender = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
chrono = { version = "0.4", features = ["serde"] }
fs2="0.4.1"
config = { version = "0.13", features = ["toml"] }
