[package]
name = "authencore"
version = "1.1.16"
edition = "2021"
authors = ["Oleksandr Zhyhalo"]

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
thiserror = "2"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
chrono = { version = "0.4", features = ["serde"] }
fs2="0.4.1"
uuid = { version = "1.13.1", features = ["v4"] }
config = "0.15.8"